# MolecularFramework

./: .gitignore  CMakeLists.txt  MolecularFramework.kdev4  Readme.md  sonar-project.properties
.github/workflows/: sonarqube.yml
.kdev4/: MolecularFramework.kdev4
cmake_modules/: FindLibscientific.cmake  FindRDKit.cmake
src/: .shapedesc.c.kate-swp  CMakeLists.txt  Documentation.txt  FFTrain.py  MakeRMSDMatrix.py  MolToAParam.py  PlotAFWeight.py  afmodeltrain.py  atomanalyser.py  atomanalysis.c  atomanalysis.h  atomdesc.c  atomdesc.h  atype.txt  combolib.cpp  cppwrap.cpp  cppwrap.h  deprecated_code  ff.txt  fielddesc.c  fielddesc.h  forcefield.c  forcefield.h  geomanalysis.cpp  geomanalysis.h  geomdesc.c  geomdesc.h  graphanalysis.cpp  graphanalysis.h  kekulize.cpp  kekulize.h  massanalysis.c  massanalysis.h  misc.c  misc.h  miscdesc.c  miscdesc.h  mol3Daligner.c  mol3Daligner.h  mol3Dfields.c  (+18 more)
src/Data/: LJ_epsilon.txt  LJ_sigma.txt
src/bin_src/: .molepot.c.kate-swp  ADescGenerator.py  ADescGeneratorPredPrep.py  CMakeLists.txt  GenPartialCharges.py  Genmol2adjmx.c  afmodel.c  align_3d_conformers.c  align_3d_on_vdw_shapes.c  align_3d_pharmacophore.c  compare_epot.c  ffgen.c  gen3Ddesc.c  gen_mol2_adjmx.c  makeVoxelDatabase.c  makeatomicgeometricdesc.c  metdbgen.c  mfieldgen.c  mol23Datypefp.c  mol23Depotfp.c  mol23Dtwoatomfp.c  mol23Dtwoatomtypewpotfp.c  mol23Dtwoatomwepotfp.c  mol23dtwoatomOneHotEncoding.c  mol2GenDescriptors.c  mol2atffp.c  mol2atfp.c  mol2twoatomdistangletorsion.c  molenegpot.c  molepot.c  molepot2matrix.c  molepot3DSphericalDesc.c  molepot3Ddesc.c  molepotVS.c  molgpot.c  molgpot3DSphericalDesc.c  molgpot3Ddesc.c  molintepot.c  molljpot.c  molljpot3DSphericalDesc.c  (+3 more)
src/tests/: CMakeLists.txt  testAlign3DPharmacophore.c  testAlign3DShapes.c  testAlign3DVDWShapes.c  testCalcMolCharge.c  testDescriptors.c  testDihedral.c  testGen3DFieldDescriptors.c  testGenAdiacenceMatrix.c  testGetAllAngles.c  testGetAllDihedral.c  testGetAllDihedralFromId.c  testGetAngle.c  testGetAtomDepth.c  testGetEMWMWfromMolecularFormula.c  testGetMol2BoxSize.c  testGetPlanarity.c  testGetShapePoints.c  testMol2AtomTypeHash.c  testMol2RandRotation.c  testMol2ToPQR.c  testMol2TranslateToNewCentre.c  testNewSDFMolecule.c  testRMSDConformations.c  testReadMol2.c  testRotoTranslationAlignment.c  testSphericalInteractionField.c  testVoxel3DFields.c
src/tests/Data/: 2ai9.mol2  A.mol2  A_B.txt  B.mol2  Conf002_alanine.mol2  Conf100_alanine.mol2  Cortisol.mol2  H2O.mol2  Imatinib.sdf  RT212.mol2  TPKI-107_A.mol2  TPKI-107_B.mol2  Triflumizole.mol2  Triflumizole_TPKI-107.txt  benzene.mol2
src/tests/Data/molwithcycle/: 20b-Dihydrocortisol.mol2  zinc_000000173969.mol2  zinc_000000173970.mol2  zinc_1862907.mol2  zinc_19898160.mol2  zinc_6914068.mol2  zinc_721482.mol2  zinc_97136251.mol2  zinc_98503430.mol2
